--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "node --loader=ts-node/esm src/index.ts",
+    "dev": "nodemon --watch 'src/**/*' -e ts,json --exec 'node --loader=ts-node/esm src/index.ts'",
     "build": "npx tsc",
     "start": "node ./dist/src/index.js",
     "start:prod": "npm run build && node ./dist/src/index.js",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest --detectOpenHandles --forceExit",
-    "test:coverage": "jest --coverage",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --config jest.config.ts --detectOpenHandles --forceExit",
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --config jest.config.ts --coverage",
     "lint": "eslint . --ext .ts --fix",
     "format": "prettier --write \"**/*.+(js|ts|json)\""
   },
@@ -24,8 +24,8 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-rate-limit": "^7.1.5",
     "express-winston": "^4.2.0",
-    "ioredis": "^5.3.2",
     "is-ipfs": "^8.0.4",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
@@ -41,7 +41,8 @@
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/express-rate-limit": "^6.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
@@ -57,9 +58,10 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
