--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
+    "target": "ES2020",
+    "module": "ES2020",
+    "moduleResolution": "node",
     "outDir": "./dist",
-    "baseUrl": ".",
     "esModuleInterop": true,
-    "types": ["node", "express", "jest"],
-    "sourceMap": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "skipLibCheck": true,
-    "strict": true
-  }
+    "composite": true,
+    "declaration": true
+  },
+  "include": ["src/**/*", "src/**/*.ts", "src/**/*.js"],
+  "exclude": ["node_modules", "dist"]
 }
